
Secure Core Utilities
Copyright (C) 2015, 2017, 2018, 2019 David M. Syzdek <david@syzdek.net>.

0.3
  - core: fixing portability issues to musl libc (syzdek)
  - core: updating autoconf checks (syzdek)
  - core: accepting tabs, '\n', '\r',  and form feed as ASCII (syzdek)
  - code: updating contrib/bindletools to v0.4-39-g28ee013 (syzdek)

0.2 2019-07-09 (syzdek)
  - core: adding ability to disable creating widget symlinks (syzdek)
  - core: updating copyright notices (syzdek)
  - core: adding ability to change widget alias prefix at compile time (syzdek)
  - syzdek: adding easter egg widget (syzdek)
  - tail: allowing timeout to be modified via env variable TAILTIMEOUT (syzdek)
  - usage: adding usage widget (syzdek)
  - version: adding version widget (syzdek)
  - zcat: fixing segfault with LXMA (.xz) and large files (syzdek)
  - touch: adding touch widget (syzdek)
  - pathcheck: adding ability to ignore mising files (syzdek)

0.1 2017-07-07
   - starting project (syzdek)
