@@ -3,6 +3,7 @@ Secure Core Utilities
 Copyright (C) 2015, 2017, 2018, 2019 David M. Syzdek <david@syzdek.net>.
 
 0.3
+  - core: forcing symlink command to match widget name exactly (syzdek)
   - core: fixing portability issues to musl libc (syzdek)
   - core: updating autoconf checks (syzdek)
   - core: accepting tabs, '\n', '\r',  and form feed as ASCII (syzdek)
